# octane

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-windows.yml  package-windows-installer.yml
Source/: PluginProcessor.cpp  PluginProcessor.h  test_idle.cpp
Source/DSP/: DelayEffect.h  DriveEffect.h  Effect.h  FilterEffect.h  GearEngine.h  PitchEffect.h  ReverbEffect.h
Source/Licensing/: ActivationDialog.cpp  LicenseManager.cpp
Source/UI/: WebViewEditor.cpp  WebViewEditor.h
docs/superpowers/specs/: 2026-07-05-fizzfuel-v2-effects-gearbox-design.md
installer/: build-installer.sh  distribution.xml  wrap-aax.sh
installer/Resources/: conclusion.html  license.html  welcome.html
installer/windows/: octane.iss
ui/: index.html
